# llama_cpp_dart

./: .gitmodules  CHANGELOG.md  LICENSE  README.md  dart_test.yaml  pubspec.yaml
.github/workflows/: ci.yml
android/: build.gradle
android/llamalib/: build.gradle
android/src/main/: AndroidManifest.xml
darwin/: create_xcframework.sh  fix_rpath.sh  run_build.sh
ios/Llama.xcframework/: Info.plist
ios/Llama.xcframework/ios-arm64/Llama.framework/: Info.plist  Llama
ios/Llama.xcframework/ios-arm64/Llama.framework/Frameworks/: libggml-base.dylib  libggml-blas.dylib  libggml-cpu.dylib  libggml-metal.dylib  libggml.dylib  libmtmd.dylib
ios/Llama.xcframework/ios-arm64/Llama.framework/Headers/: llama.h
ios/Llama.xcframework/ios-arm64/Llama.framework/_CodeSignature/: CodeResources
ios/Llama.xcframework/ios-arm64_x86_64-simulator/Llama.framework/: Info.plist
ios/Llama.xcframework/macos-arm64/Llama.framework/: Info.plist
lib/: llama_cpp_dart.dart
lib/src/chat/: tool_calling.dart
lib/src/core/: context_params.dart  json_schema_to_gbnf.dart  llama.dart  llama_diagnostics.dart  llama_log_level.dart  llama_service.dart  llama_session_io.dart  lora_adapter.dart  parallel_decoder.dart  reranker.dart
lib/src/isolate/: isolate_child.dart  isolate_parent.dart
lib/src/mcp/: mcp_client.dart
lib/src/prompt/: chatml_format.dart  template_router.dart
macos/: CMakeLists.txt
src/: CMakeLists.txt
test/integration/: llama_integration_test.dart
